# moe-core

./: .env.example  .gitignore  .gitmodules  README.md  foundry.toml  pyproject.toml  remappings.txt
encode_transactions/: main.py
encode_transactions/utils/: README.md
script/: 0_DeployProtocol.s.sol  1_DeployDex.s.sol  DeployProtocol.s.sol  Parameters.sol
script/fuji/: 0_DeployProtocol.s.sol  1_DeployDex.s.sol  Parameters.sol
script/mantle/: 0_DeployProtocol.s.sol  1_DeployDex.s.sol  2_Deploy.s.sol  2_DeployMasterChef.s.sol  2_DeployVeMoe.s.sol  3_Deploy.s.sol  Addresses.sol  Parameters.sol
src/: BaseRewarder.sol  JoeStaking.sol  MasterChef.sol  MasterChefRewarder.sol  Moe.sol  MoeLens.sol  MoeStaking.sol  MultiRewarder.sol  SimpleRewarder.sol  StableMoe.sol  VeMoe.sol  VeMoeRewarder.sol  VestingContract.sol  VestingWallet.sol
src/dex/: MoeERC20.sol  MoeFactory.sol  MoeHelper.sol  MoePair.sol  MoeQuoter.sol  MoeRouter.sol
src/interface/: IBaseRewarder.sol  IBribe.sol  IMasterChef.sol  IMasterChefRewarder.sol  IMoe.sol  IMoeCallee.sol  IMoeERC20.sol  IMoeFactory.sol  IMoePair.sol  IMoeStaking.sol  IMultiRewarder.sol  IRewarder.sol  IStableMoe.sol  IVeMoe.sol  IVeMoeRewarder.sol
src/interfaces/: IBaseRewarder.sol  IMoe.sol  (+10 more)
test/: BatchTransactions.t.sol  Deploy.t.sol  DeployDex.t.sol  DeployProtocol.t.sol  JoeStaking.t.sol  MasterChef.t.sol  MasterChefRewarder.t.sol  MoeLens.t.sol  MoeStaking.t.sol  RewarderFactory.t.sol  StableMoe.t.sol  Upgrade.t.sol  UpgradeMasterChef.t.sol  UpgradeVeMoe.t.sol  VeMoe.t.sol  VestingContract.t.sol  VestingWallet.t.sol
(+28 files in other folders)
